--- a/source/webapp/templates/products/producrt_update.html
+++ b/source/webapp/templates/products/producrt_update.html
@@ -1,10 +1,12 @@
-{#<!DOCTYPE html>#}
-{#<html lang="en">#}
-{#<head>#}
-{#    <meta charset="UTF-8">#}
-{#    <title>Title</title>#}
-{#</head>#}
-{#<body>#}
-{##}
-{#</body>#}
-{#</html>#}
+
+{% extends "base.html" %}
+{% block title %}Update Product{% endblock %}
+{% block menu %}
+    <li><a href="{% url 'webapp:product_view' obj.pk %}">View</a></li>
+{% endblock %}
+{% block content %}
+    <h1>Update Project</h1>
+    <form method="POST" action="{% url "webapp:product_update" obj.pk %}" enctype="multipart/form-data">
+        {% include 'partial/form.html' with button_text='Update' %}
+    </form>
+{% endblock %}
