control-8 4 этап добавил Вход Выход Регистрация - можно без подтверждения по email Страница пользователя Личный кабинет (редактирование личных данных) Смена пароля.

--- a/source/webapp/templates/products/product_detail.html
+++ b/source/webapp/templates/products/product_detail.html
@@ -23,6 +23,7 @@
         <div class="task">
             <p><b>{{ review.user }}</b></p>
             <p>Отзыв: {{ review.review_text }}</p>
+{#           <p>email:{{ review.user.email }}</p>
             <p>Оценка: {{ review.assessment }}</p>
             <p class="projects-links">
                 <a href="{% url 'webapp:review_update' review.pk %}">Edit</a>
