--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -18,6 +18,14 @@
         <ul class="menu">
             <li><a href="{% url 'webapp:index' %}">Home</a></li>
             {% block menu %}{% endblock %}
+            {% if request.user.is_authenticated %}
+                <li> <span class="menu-text"> Привет </span><a href="{% url 'accounts:user_detail' request.user.pk  %}">{{ request.user.pk }}</a></li>
+                <li><a href="{% url 'accounts:logout' %}"> Log Out</a></li>
+            {% else %}
+                <li><a href="{% url 'accounts:login' %}"> Log in</a></li>
+                <li><a href="{% url 'accounts:register' %}">Sing up</a></li>
+            {% endif %}
+
 {
         </ul>
     </div>
