--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -13,6 +13,11 @@
 
 </head>
 <body>
+<div class="nav">
+        <div class="container">
+        <h1>Главная</h1>
+       </div>
+</div>
 <nav class="navbar">
     <div class="container">
         <ul class="menu">
